force-app/main/default/objects/Game_Unit__c/Game_Unit__c.object-meta.xml
<CustomObject>
    <label>Game Unit</label>
    <nameField>
        <displayFormat>GU-{0000}</displayFormat>
        <label>Game Question Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Game Units</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>