force-app/main/default/objects/Game_Unit__c/fields/Game_Session__c.field-meta.xml
<CustomField>
    <fullName>Game_Session__c</fullName>
    <label>Game Session</label>
    <referenceTo>Game_Session__c</referenceTo>
    <relationshipLabel>Game Units</relationshipLabel>
    <relationshipName>Game_Units</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>